<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_id"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:padding="24dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_title"
                android:text="@string/enter_item"
                android:textStyle="italic"
                android:textSize="18sp"
                android:layout_centerHorizontal="true"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/et_item"
                android:layout_below="@id/tv_title"
                android:hint="@string/hint_item"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/et_item_qty"
                android:layout_below="@id/et_item"
                android:hint="@string/hint_qty"
                android:inputType="number"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/et_item_color"
                android:layout_below="@id/et_item_qty"
                android:hint="@string/hint_color"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/et_item_size"
                android:layout_below="@id/et_item_color"
                android:hint="@string/hint_size"
                android:inputType="number"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/btn_save"
                android:layout_below="@+id/et_item_size"
                android:layout_marginTop="5dp"
                android:textSize="14sp"
                android:textStyle="bold"
                android:text="@string/save_buton"
                android:background="@color/colorAccent"
                android:textColor="@android:color/white"/>

        </RelativeLayout>

    </androidx.cardview.widget.CardView>
</LinearLayout>