<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="23dp">

            <TextView
                android:id="@+id/tv_text_alert"
                android:text="@string/sure_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:padding="6dp"
                android:textSize="17sp"/>

            <Button
                android:id="@+id/btn_conf_no"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no_text"
                android:background="@color/colorAccent"
                android:textColor="@android:color/white"
                android:layout_marginTop="40dp"/>

            <Button
                android:id="@+id/btn_conf_yes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/yes_text"
                android:background="@color/colorAccent"
                android:textColor="@android:color/white"
                android:layout_marginTop="40dp"
                android:layout_alignParentEnd="true"/>

        </RelativeLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>